--- a/ChowBox.html
+++ b/ChowBox.html
@@ -16,69 +16,70 @@
          <!-- Latest compiled and minified JavaScript -->
          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
       </head>
-      <body>
-         <section id="homepage"class="homepage" >
-            <nav class="navigation col-md-4">
+      <body data-spy="scroll" data-target="#myScrollspy" data-offset="50">
+         <section id="homepage"class="navbar homepage" >
+            <nav class="navigation col-md-4"  id ="myScrollspy">
                <div class="homeNav">
-                  <ul class = "navigation_list">
-                     <li class="navigation_item-toggle">
-                        <a href="#homepage">Chow Box</a>
+                  <ul class = "navigation_list nav nav-pills nav-stacked">
+                     <li class="navigation_item">
+                        <a class = "aB" href="#homepage">Chow Box</a>
                      </li>
                      <li class="navigation_item">
-                        <a href="#about">MISSION</a>
+                        <a class = "aB" href="#mission">MISSION</a>
                      </li>
                      <li class="navigation_item">
-                        <a href="#projects">PROCESS</a>		
+                        <a class = "aB" href="#process">PROCESS</a>		
                      </li>
                      <li class="navigation_item">
-                          <a href="#app">PROTOTYPE</a>	
+                          <a class = "aB" href="#prototype">PROTOTYPE</a>	
                     </li>
                   </ul>
                </div>
             </nav>
-            <div class="col-md-8 chowHomeSector">
+            <div id="homepage" class="col-md-8 chowHomeSector">
             </div>
 
             <div class="col-md-8 chowAboutSector">
                 <div class="container">
                     <!--<div>-->
+                            <div class="stockIntro">
+                            <div class="decervoText">
+
+
                         <div class="stockIntro">
-                    <h1>Mission</h1>
-                    <h1>Streamlining the takeout ordering process by providing an app based ordering and payment solution, as well as a secure box to keep food at an appropriate temperature.</h1>
-                    <h1>Product: App and Temperature-Controlled Box Prototype</h1>  
-
-                    <!--<iframe width="100%" height="100%" src="https://www.youtube.com/embed/9UJYzSgAA-g" frameborder="0" allowfullscreen></iframe>-->
-                    <iframe width="80%" height="80%" src="https://www.youtube.com/embed/9UJYzSgAA-g?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-
+                            <div class="decervoText">
+                    <h1 id="mission">Mission</h1>
+                    <h2 class = "dSubTitle">Streamlining the takeout ordering process by providing an app based ordering and payment solution, as well as a secure box to keep food at an appropriate temperature.</h2>
+                    <iframe class = "stockVid" width="80%" height="80%" src="https://www.youtube.com/embed/9UJYzSgAA-g?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+</div>
                  </div>
 
-                    <h1 class = "chowTitle">SPRINT 1</h1>
+                    <h1 id="process"class = "chowTitle">SPRINT 1</h1>
                    <div class="imgTextStock">
                      <img src="../img//chowbox/sprint1.png" alt="Sprint 1" class="decervoImg"> 
-                    <p class = "textOver chow">This first sprint was all about seeing whether there was interest in our service.  Simple paper prototypes were created to guide user testers and a pizza box was used in place of our box prototype.  Using pizza as an incentive, we gave brief interviews to each user-tester where we uncovered positive feedback as well as uncovering concerns moving forward with this product.
+                    <p class = "textOver chow">Simple paper prototypes were created to guide user testers and a pizza box was used in place of our box prototype.  Brief interviews were given to each user-tester.
                     </p>
                  </div>
 
                      <h1 class = "chowTitle">SPRINT 2</h1>
                      <div class="imgTextStock">
-                     <p class = "textOver chow">These weeks were sprint iterating out paper prototype and upgrading our box prototyping to include the main feature of "automaticity."  The post-test interviews were directed at simplifying the user interface and user experience as this sprint was directed on the ordering process.</p>
                      <img src="../img//chowbox/sprint2.png" alt="Sprint 2" class="decervoImg">  
+                                          <p class = "textOver chow">Continued with paper prototypes and upgraded our box prototype to include the main feature of "automaticity."  The post-test interviews were directed at simplifying the user interface and user experience of the ordering process.</p>
+
                      </div>
                      <h1 class = "chowTitle">SPRINT 3</h1>
                      <div class="imgTextStock">
-                     <p class = "textOver chow">Started with simple paper prototypes, user-tested and iterated upon to eventual designing of the user interface and compiling user-flows.  These wireframes 
-                         done in Figma(collaboration based barebones, cloud illustrator) and eventually moved to InVision for a Low-Fidelity HotSpot prototype.  These were presented on mobile devices and features were
+                         <img src="../img//chowbox/sprint3.png" alt="Sprint 3" class="decervoImg">
+                         <p class = "textOver chow">Designed user interface and compiled user-flows.  Wireframes were done in Illustrator eventually moved to InVision for a Low-Fidelity prototype.  These were presented on mobile devices and features were
                          added and improved based off user feedback. </p>
-                         <!--<iframe width="438" height="930" src="//invis.io/5C9L84EEU" frameborder="0" allowfullscreen></iframe>  -->
-                     <img src="../img//chowbox/sprint3.png" alt="Sprint 3" class="decervoImg">
                           </div>
                      <h1 class = "chowTitle">SPRINT 4</h1>      
                      <div class="imgTextStock">           
-                     <p class = "textOver chow">Now was the time to take our solution outside into the world.  We instigated three separate cases where users had to order, travel, and pickup from the "ChowBox" at the desired restaurant location.  Thorough interviews were conducted based on the user-testers experience where the product resounded with positive responses.
-                     </p>
                      <img src="../img//chowbox/sprint4.png" alt="Sprint 4" class="decervoImg">
+                                          <p class = "textOver chow">Took our solution to the outside world.  We instigated three separate cases where users had to order, travel, and pickup from the "ChowBox" at the desired restaurant location.  Interviews were conducted based on the user-testers experience.
+                     </p>
     </div>
-                       <h1 class = "chowTitle">Explore the Prototype:</h1>
+                       <h1 id="prototype" class = "chowTitle">Explore the Prototype:</h1>
                                                <!--<iframe width="438" height="930" src="//invis.io/5C9L84EEU" frameborder="0" allowfullscreen></iframe>  -->
                                                <iframe src="https://invis.io/H37BC9PSG" frameborder="0" allowfullscreen="" style="width:100%; height:100%;" class="embed-content"></iframe>
 
