--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class = "aB" href="#contact">CONTACT</a>
                      </li>
                      <li class="navigation_item">
-                        <a class = "aB" href="#projects">PROJECTS</a>		
+                        <a class = "aB" href="#projects">PORTFOLIO</a>		
                      </li>
                    
                   </ul>
