--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          <script type="text/javascript" src="./js/jquery-3.1.1.js"></script>
          <script type="text/javascript" src="./js/script.js"></script>
         <link rel="stylesheet" href="css/slick.slider.css">
-         <script src="js/slick.min.js"></script>
+         /*<script src="js/slick.min.js"></script>*/
          <!-- Latest compiled and minified CSS -->
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
          <!-- Latest compiled and minified JavaScript -->
