uploaded to host changes

--- a/ChowBox.html
+++ b/ChowBox.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="col-md-8 chowAboutSector">
-                <div class="container">
+                <!--<div class="container">-->
                     <!--<div>-->
                             <div class="stockIntro">
                             <div class="decervoText">
@@ -56,26 +56,26 @@
 
                     <h1 id="process"class = "chowTitle">SPRINT 1</h1>
                    <div class="imgTextStock">
-                     <img src="../img//chowbox/sprint1.png" alt="Sprint 1" class="decervoImg"> 
+                     <img src="./img//chowbox/sprint1.png" alt="Sprint 1" class="decervoImg"> 
                     <p class = "textOver chow">Simple paper prototypes were created to guide user testers and a pizza box was used in place of our box prototype.  Brief interviews were given to each user-tester.
                     </p>
                  </div>
 
                      <h1 class = "chowTitle">SPRINT 2</h1>
                      <div class="imgTextStock">
-                     <img src="../img//chowbox/sprint2.png" alt="Sprint 2" class="decervoImg">  
+                     <img src="./img//chowbox/sprint2.png" alt="Sprint 2" class="decervoImg">  
                                           <p class = "textOver chow">Continued with paper prototypes and upgraded our box prototype to include the main feature of "automaticity."  The post-test interviews were directed at simplifying the user interface and user experience of the ordering process.</p>
 
                      </div>
                      <h1 class = "chowTitle">SPRINT 3</h1>
                      <div class="imgTextStock">
-                         <img src="../img//chowbox/sprint3.png" alt="Sprint 3" class="decervoImg">
+                         <img src="./img//chowbox/sprint3.png" alt="Sprint 3" class="decervoImg">
                          <p class = "textOver chow">Designed user interface and compiled user-flows.  Wireframes were done in Illustrator eventually moved to InVision for a Low-Fidelity prototype.  These were presented on mobile devices and features were
                          added and improved based off user feedback. </p>
                           </div>
                      <h1 class = "chowTitle">SPRINT 4</h1>      
                      <div class="imgTextStock">           
-                     <img src="../img//chowbox/sprint4.png" alt="Sprint 4" class="decervoImg">
+                     <img src="./img//chowbox/sprint4.png" alt="Sprint 4" class="decervoImg">
                                           <p class = "textOver chow">Took our solution to the outside world.  We instigated three separate cases where users had to order, travel, and pickup from the "ChowBox" at the desired restaurant location.  Interviews were conducted based on the user-testers experience.
                      </p>
     </div>
@@ -84,7 +84,7 @@
                                                <iframe src="https://invis.io/H37BC9PSG" frameborder="0" allowfullscreen="" style="width:100%; height:100%;" class="embed-content"></iframe>
 
  </div>
-  </div>
+  <!--</div>-->
 
         
       </body>
