--- a/loopOS.html
+++ b/loopOS.html
@@ -43,17 +43,17 @@
             </div>
 
             <div class="col-md-8 loopAboutSector">
-                <div class="container">
+                <!--<div class="container">-->
                                <div class="decervoText">
                    <h2 id="mission">3Months. 3People. 1Goal.</h1>
                   <h1 class = "loopIntro">Design a Mobile Operating System</h2>
 </div>
                    
-                    <h1 class="loopTitle">SPRINT 1</h1>
+                    <h1 id= "process"class="loopTitle">SPRINT 1</h1>
                     <h1>Themes. Values. Surveys. Interviews.</h1>
                     
                     <div class="imgText">
-                     <img src="../img//loop/themes.png" alt="Design Themes" class="decervoImg"> 
+                     <img src="./img//loop/themes.png" alt="Design Themes" class="decervoImg"> 
                       <p class = "textOver">Quick successions of research, brainstorming, and collaboration were done to quickly fathom which focus points to build upon.</p>
                      </img> 
                      </div>
@@ -62,25 +62,25 @@
                      <h1>Compile Ideas and produce Low-Fidelity Wireframes</h1>
                      <div class="imgText">
                      <p class = "textOver">Ideas flourished as we began to set the basic outline of the Mobile OS.</p>  
-                     <img src="../img//loop/sprint1.png" alt="Whiteboard and Post-Its" class="decervoImg">  
+                     <img src="./img//loop/sprint1.png" alt="Whiteboard and Post-Its" class="decervoImg">  
                        </div>
                      <h1 class="loopTitle">SPRINT 3</h1>
                      <h1>Core Mobile OS Apps</h1>
                      <div class="imgText">
                      <p class = "textOver">Contacts, Mail, Dialer, Messenger, Calendar, Camera, Photos. </p>  
-                     <img src="../img//loop/core.png" alt="uHIT Mobile Flowchart" class="decervoImg">
+                     <img src="./img//loop/core.PNG" alt="uHIT Mobile Flowchart" class="decervoImg">
                       </div>
                      <h1 class="loopTitle">SPRINT 4</h1>
                      <h1>Secondary Mobile OS Apps</h1>
                      <div class="imgText">
                      <p class = "textOver">Music, Navigation, Notes, Wallet, Health, Browser, Clock, Weather, Calculator.</p>
-                     <img src="../img//loop/secondary.png" alt="HTML Snip" class="decervoImg">
+                     <img src="./img//loop/secondary.PNG" alt="HTML Snip" class="decervoImg">
                       </div>
                      <h1 class="loopTitle">SPRINT 5</h1>
                      <h1>Finalization of the Mobile OS</h1>   
-<iframe src="https://drive.google.com/file/d/0BwZrUtGyvIaDMjdtUFkta2RENHc/preview" width="100%" height="80%"></iframe>
+<iframe id = "deck"src="https://drive.google.com/file/d/0BwZrUtGyvIaDMjdtUFkta2RENHc/preview" width="100%" height="80%"></iframe>
 <div class="blank"></div>
  </div>
-  </div>
+  <!--</div>-->
       </body>
    </html>
