--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                <h1 class = "titleName">Jordan Freitas</h1>
             </div>
             <div id = "about" class="col-lg-8 col-sm-12 aboutSector">
-                <div class="container">
+                <!--<div class="container">-->
                      <div class="slick-hero-slider-wrapper">
                          <div class="slider slick-hero-slider">
                               <div class="slick-item">
@@ -60,16 +60,23 @@
                     </div>
                    <div class="mission">
                          <img src="./img/spaceNeedle.svg" alt="Space Needle" class=" col-md-2 spaceNeedle">
-               <h1 class = "col-md-10 textNeedle" >Born and raised in Seattle, My mission is to have technology innovation thrive in our society.  </h1>
+               <h1 class = "col-md-10 textNeedle" >  
+                   Born and raised in Seattle, my vision is to become an Interaction Designer and User Experience expert in Mixed Reality Systems.
+                   <br>
+                   <br>
+I have experience as a full stack developer but focus on front end system development.
+  My diverse background, open mindset, and lateral thinking ability streamlines my passion to learn and make a difference in technology innovation.
+               </h1>
          </div>
  
+            <!--<h1>HUMAN COMPUTER...INTEGRATION</h1>-->
                <div class="col-md-4 interests imgText">
                    <p class = "textOverI iconInt">User Experience Design and Development
                     </p>
                    <img src="./img/ux.svg" alt="UX Design" class="interestIcon">
                </div>
                <div class="col-md-4 interests imgText">
-                   <p class = "textOverI iconInt">Web Design and Development
+                   <p class = "textOverI iconInt">Website Design and Development 
                     </p>
                    <img src="./img/web.svg" alt="Web Applications" class="interestIcon">
                    
@@ -124,7 +131,8 @@
                  <div class="col-md-6 cIcon">
                 <a data-toggle="tooltip" title="jordanfreitas4@gmail.com" href="./files/JordanFreitasResume2017.pdf" target="_blank"><img src="./img/pdf.svg" alt="decervoWebsite" class=""></a>
                  </div>
-                 </div>
+                 <!--</div>-->
+            </div>
             </div>
 			<div id = "projects" class="col-lg-8 col-sm-12 projectSector">
                  <a href="decervo.html">
@@ -135,7 +143,7 @@
                    
 				</div>
                  </a>
-                 <a href="stockUP.html">
+                 <a href="stockUp.html">
 				<div class="projectItem">
 					<img src="./img/stockUp.PNG" alt="stockUp" class="stockUp">
 					<h1 class = "projectTitle stockTitle">STOCK UP</h1>
