--- a/loopOS.html
+++ b/loopOS.html
@@ -33,6 +33,9 @@
                      <li class="navigation_item">
                           <a class = "aB" href="#deck">SIZZLE DECK</a>	
                     </li>
+                     <li class="navigation_item">
+                        <a class = "aB" href="http://students.washington.edu/jfreitas/">HOME</a>		
+                     </li>
                   </ul>
                </div>
             </nav>
@@ -77,7 +80,8 @@
                      <img src="./img//loop/secondary.PNG" alt="HTML Snip" class="decervoImg">
                       </div>
                      <h1 class="loopTitle">SPRINT 5</h1>
-                     <h1>Finalization of the Mobile OS</h1>   
+                     <a style= "color: white;" target = "_blank"href="https://drive.google.com/file/d/0BwZrUtGyvIaDMjdtUFkta2RENHc/preview">
+                     <h1>Finalization of the Mobile OS</h1>   </a>
 <iframe id = "deck"src="https://drive.google.com/file/d/0BwZrUtGyvIaDMjdtUFkta2RENHc/preview" width="100%" height="80%"></iframe>
 <div class="blank"></div>
  </div>
