--- a/stockUp.html
+++ b/stockUp.html
@@ -33,6 +33,9 @@
                      <li class="navigation_item">
                           <a class = "aB" href="#prototype">PROTOTYPE</a>	
                     </li>
+                     <li class="navigation_item">
+                        <a class = "aB" href="http://students.washington.edu/jfreitas/">HOME</a>		
+                     </li>
                   </ul>
                </div>
             </nav>
